--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "directories": {
     "doc": "docs"
   },
+  "engines": {
+    "node": "6.2.1",
+    "npm": "3.9.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "./node_modules/.bin/webpack --watch",
-    "webpack-once": "./node_modules/.bin/webpack"
+    "server": "webpack-dev-server --progress --colors"
   },
   "repository": {
     "type": "git",
@@ -26,6 +29,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "js-cookie": "^2.1.3",
-    "webpack": "^1.14.0"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
