--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "js-cookie": "^2.1.3",
+    "lodash": "^4.17.4",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
