--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "firebase": "^3.7.0",
     "js-cookie": "^2.1.3",
     "lodash": "^4.17.4",
     "webpack": "^2.2.1",
